[package]
name = "restman"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7.0.0"
criterion = "0.3.5"

[[bench]]
name = "http_parser"
harness = false

[lib]
bench = false

[[bin]]
name = "restman"
path = "src/main.rs"
bench = false
