[package]
name = "parser"
version = "0.0.1"
edition = "2021"

[lib]
bench = false

[dependencies]
nom = "7.1.3"
nom_locate = "4.1.0"
bumpalo = "3.11.1" # indirect dependency, upgraded for security

[dev-dependencies]
criterion = "0.4.0"
iai = "0.1.1"
indoc = "2.0.1"


[[bench]]
name = "http_parser"
harness = false
